[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/theme_hud_main.tres" type="Theme" id=1]
[ext_resource path="res://scenes/scn_ui_settings_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/themes/fnt_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/scene_scripts/scn_ui_pause.gd" type="Script" id=4]

[node name="ScnUiPause" type="CanvasLayer"]
pause_mode = 2
layer = 2
visible = false
script = ExtResource( 4 )

[node name="Shade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.156863 )

[node name="PauseMenu" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
margin_left = 772.0
margin_top = 289.0
margin_right = 1147.0
margin_bottom = 790.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
margin_right = 375.0
margin_bottom = 129.0
custom_fonts/font = ExtResource( 3 )
text = "Paused"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/VBoxContainer"]
margin_top = 149.0
margin_right = 375.0
margin_bottom = 501.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/VBoxContainer/CenterContainer"]
margin_left = 6.0
margin_right = 368.0
margin_bottom = 352.0

[node name="BtnResume" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 362.0
margin_bottom = 85.0
text = "Resume"

[node name="BtnSettings" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 362.0
margin_bottom = 174.0
text = "Settings"

[node name="BtnMainMenu" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 362.0
margin_bottom = 263.0
text = "Main Menu"

[node name="BtnQuit" type="Button" parent="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 362.0
margin_bottom = 352.0
text = "Quit"

[node name="ScnUiSettingsMenu" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer/BtnMainMenu" to="." method="_on_BtnMainMenu_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="settings_saved" from="ScnUiSettingsMenu" to="." method="_on_ScnUiSettingsMenu_settings_saved"]
